# dotfiles

./: .editorconfig  .gitignore  .gitpod.yml  Arch.py  Cargo.toml  Kubuntu.py  Linux.py  LinuxCommands.py  Lubuntu.py  Mac.py  README.md  Rakefile  Server.sh  System.py  Ubuntu.py  Unix.py  Windows.py  Xubuntu.py  backupMail  backupMail.sh  backupOwncloud.sh  convert_audio.sh  convert_videos.sh  desktop  desktop.sh  distroinstaller.py  dynIpUpdate.sh  install.py  migrate-git-repo.sh  mount-nas-drive.sh  mount-nas.sh  raspberrypi  raspberrypi.sh  server.sh  symlink-config  todo.md  unmount-nas-drive.sh  unmount-nas.sh
.circleci/: config.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: main.yml  semgrep.yml
archive/: Lubuntu.py  Mac.py  System.py  Ubuntu.py  Unix.py  Windows.py  install.py  requirements.txt
docker/: arch.dockerfile  ubuntu.dockerfile
git/: gitconfig.symlink  post-checkout.symlink
scripts/: mount-nas-drive.sh
src/: arch.rs  config.rs  error.rs  install.rs  linux.rs  mac.rs  main.rs  system.rs  ubuntu.rs  unix.rs  windows.rs
tmux/: tmux.conf  tmux.conf.symlink
zsh/: zshrc  zshrc.symlink
