[package]
name = "dotfiles"
description = "Installs and sets up devices"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/gigaSproule/dotfiles"

[dependencies]
async-trait = "0.1.82"
dirs = "5.0.1"
reqwest = "0.12.9"
tokio = { version = "1.37.0", features = [ "full" ] }
open = "5.1.2"
"zip" = "2.1.3"

[dev-dependencies]
mockall = "0.13.0"
mockall_double = "0.3.1"
serial_test = "3.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.0.30"
tar = "0.4.40"
uuid = { version = "1.8.0", features = [ "v4" ] }
whoami = "1.5.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = [ "fs", "user" ] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
registry = "1.2.3"
utfx = "0.1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
