[package]
name = "dotfiles"
description = "Installs and sets up devices"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/gigaSproule/dotfiles"

[dependencies]
async-trait = "0.1.86"
dirs = "6.0.0"
reqwest = "0.12.21"
tokio = { version = "1.43.0", features = ["full"] }
open = "5.3.2"
"zip" = "5.0.0"
wgpu = "26.0.0"

[dev-dependencies]
mockall = "0.13.1"
mockall_double = "0.3.1"
serial_test = "3.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.1.4"
tar = "0.4.44"
whoami = "1.5.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"
nix = { version = "0.30.0", features = ["fs", "user"] }
uuid = { version = "1.15.1", features = ["v4"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
registry = "1.3.0"
utfx = "0.1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
