[package]
name = "dotfiles"
description = "Installs and sets up devices"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/gigaSproule/dotfiles"

[dependencies]
async-trait = "0.1.89"
dirs = "6.0.0"
log = "0.4.29"
log4rs = "1.4.0"
reqwest = "0.13.0"
tokio = { version = "1.48.0", features = ["full"] }
open = "5.3.3"
"zip" = "7.0.0"
wgpu = "28.0.0"

[dev-dependencies]
mockall = "0.14.0"
mockall_double = "0.3.1"
serial_test = "3.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1.1.5"
tar = "0.4.44"
whoami = "2.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"
nix = { version = "0.30.1", features = ["fs", "user"] }
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
registry = "1.3.0"
utfx = "0.1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
